ISPN-9100 Upgrade components
- JBoss Marshalling 2.0.5
- Mockito 2.18.3
- ByteBuddy 1.8.8
- Objenesis 2.3
- ByteMan 4.0.2